--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.b {
   background-image: url("images/tom1.png");
 }
 
@@ -24,23 +24,23 @@ footer {
   background-image: url("images/tom2.png");
 }
 
-.s {
+.n {
   background-image: url("images/tom3.png");
 }
 
-.d {
+.g {
   background-image: url("images/tom4.png");
 }
 
-.j {
+.  {
   background-image: url("images/snare.png");
 }
 
-.k {
+.o {
   background-image: url("images/crash.png");
 }
 
-.l {
+.n {
   background-image: url("images/kick.png");
 }
 
